# Light_Glue_CPP

./: .gitignore  CMakeLists.txt  README.md
examples/: main.cpp
include/: ALIKED.hpp  LightGlue.hpp  LightGlueModules.hpp  input_padder.hpp
include/feature/: ALIKED.hpp  input_padder.hpp
include/matcher/lightglue/: core.hpp  matcher.hpp
src/: ALIKED.cpp  DKD.cpp  LightGlue.cpp  LightGlueAssignment.cpp  LightGlueBlocks.cpp  LightGlueModules.cpp  LightGlueTransformer.cpp  SDDH.cpp  input_padder.cpp
src/feature/: ALIKED.cpp  DKD.cpp  SDDH.cpp  blocks.cpp  deform_conv2d.cpp  deform_conv2d_kernel.cu  get_patches.cpp  get_patches_cuda.cu  input_padder.cpp
src/matcher/: LightGlue.cpp  LightGlueAssignment.cpp  LightGlueBlocks.cpp  LightGlueModules.cpp  LightGlueTransformer.cpp
src/matcher/lightglue/: attention.cpp  core.cpp  encoding.cpp  matcher.cpp  transformer.cpp
